Final initalization of project structure

--- a/eShop.Web/eShop.Web.csproj
+++ b/eShop.Web/eShop.Web.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\eShop.Web.Modules\eShop.Web.CustomerPortal\eShop.Web.CustomerPortal.csproj" />
+    <ProjectReference Include="..\Plugins\eShop.DataStore.HardCode\eShop.DataStore.HardCode.csproj" />
+  </ItemGroup>
+
 </Project>
