--- a/Plugins/eShop.DataStore.HardCode/eShop.DataStore.HardCode.csproj
+++ b/Plugins/eShop.DataStore.HardCode/eShop.DataStore.HardCode.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\..\eShop.UseCases\eShop.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
