--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
   </ItemGroup>
 
 </Project>
