--- a/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
+++ b/eShop.Web.Modules/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.3" />
   </ItemGroup>
 
