--- a/eShop.Web/appsettings.Development.json
+++ b/eShop.Web/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default":"Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=eShop;Integrated Security=True"
   }
 }
